--- a/wish.html
+++ b/wish.html
@@ -57,7 +57,7 @@
         <main>
             <section class="message">
                 <p>
-                    My dear Priya, I can’t begin to express just how much you mean to me. From the very first day we met, I knew you were special. Our friendship has grown into something deep and meaningful, filled with laughter, shared secrets, and endless memories. You are not just a friend; you are family, a confidant, and my everything.
+                    My dear Dummiii .
                 </p>
                 <hr/>
                 <p>
