--- a/wish.html
+++ b/wish.html
@@ -56,18 +56,15 @@
         </header>
         <main>
             <section class="message">
-                <p>
-                    My dear Dummiii .
-                </p>
                 <hr/>
                 <p>
-                    Every moment spent with you has been a gift – from the flirty banter that makes me smile to the quiet, caring moments that bring me comfort. I cherish every bit of our journey together and am so grateful to have you by my side.
+                    Happy Birthday, Priya! Thank you for being an incredible part of my life, for sharing countless memories, both joyful and challenging, that I’ll forever cherish. I’m sorry if I’ve ever hurt you in any way—it was never my intention. I wish you endless happiness, love, and success ahead. Though life may change how often we talk, you’ll always hold a special place in my heart. Enjoy your day to the fullest—you truly deserve all the best!
+
+
                 </p>
                 <hr/>
-                <p>
-                    So here's to many more years of friendship, fun, and perhaps a little more of that playful flirting that keeps our bond strong. Happy Birthday, my dearest Priya! May all your dreams come true and may we continue to create memories that last a lifetime.
-                </p>
-                <hr/>
+    
+                
             </section>
         </main>
         <footer class="footer">
