--- a/wish.html
+++ b/wish.html
@@ -58,8 +58,13 @@
             <section class="message">
                 <hr/>
                 <p>
-                    Happy Birthday, Priya! Thank you for being an incredible part of my life, for sharing countless memories, both joyful and challenging, that I’ll forever cherish. I’m sorry if I’ve ever hurt you in any way—it was never my intention. I wish you endless happiness, love, and success ahead. Though life may change how often we talk, you’ll always hold a special place in my heart. Enjoy your day to the fullest—you truly deserve all the best!
+Happy Birthday, Priya!
 
+Thank you for being such an amazing part of my life. The memories we’ve made together, through the good times and the tough ones, mean so much to me. I’m sorry if I’ve ever hurt you—it was never my intention.
+
+I truly wish you all the happiness, love, and success in the world. No matter how life changes or how often we talk, you’ll always have a special place in my heart.
+
+Enjoy your day to the fullest—you deserve nothing but the best! 💖
 
                 </p>
                 <hr/>
