--- a/wish.html
+++ b/wish.html
@@ -58,11 +58,11 @@
             <section class="message">
                 <hr/>
                 <p>
-Happy Birthday, Priya!
+Happy Birthday, Priya Dummi.<br/>
 
-Thank you for being such an amazing part of my life. The memories we’ve made together, through the good times and the tough ones, mean so much to me. I’m sorry if I’ve ever hurt you—it was never my intention.
+Thank you for being such an amazing part of my life. The memories we’ve made together, through the good times and the tough ones, mean so much to me. I’m sorry if I’ve ever hurt you—it was never my intention.<br/>
 
-I truly wish you all the happiness, love, and success in the world. No matter how life changes or how often we talk, you’ll always have a special place in my heart.
+I truly wish you all the happiness, love, and success in the world. No matter how life changes or how often we talk, you’ll always have a special place in my heart.<br/>
 
 Enjoy your day to the fullest—you deserve nothing but the best! 💖
 
